--- a/project-app-support.html
+++ b/project-app-support.html
@@ -500,7 +500,7 @@
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
                     <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>The Circles</h3>
-                        <p class="mb-0 lead fw-normal">Our method of customer support since the 1990s. This is a formal process to keep Development, Deployment, Defect Correction, and App Enhancements running constantly. This is now referred to as "DevOps" and "Agile" and "Continous Delivery". </p>
+                        <p class="mb-0 lead fw-normal">Our method of customer support since the 1990s. This is a formal process to keep Development, Deployment, Defect Correction, and App Enhancements running constantly. This is now referred to as "DevOps" and "Agile" or "Continuous Delivery". </p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -530,7 +530,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
                     <div class="col-12 col-lg-5 order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>Development Tools</h3>
-                        <p>During VAX/VMS and Alpha AXP years we used our own "MicroCODE Development System" (MDS) built as a shell on top of DEC Code Management (CMS) and Module Management System (MMS). With Windows development we use a internal version of our MDS along with Visual Studio. For Web development we use Git and GitHub and Visual Studio Code with our MDS process translated into 'Git Flow'-like workflow.</p>
+                        <p>During VAX/VMS and Alpha AXP years we used our own "MicroCODE Development System" (MDS) which was built as a shell on top of DEC Code Management (CMS) and Module Management System (MMS). With Windows development we use a internal version of our MDS along with Visual Studio. For Web development we use Git and GitHub and Visual Studio Code with our MDS process translated into 'Git Flow'-like workflow.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -559,7 +559,7 @@
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
                     <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="50">
                         <h3>Documentation</h3>
-                        <p class="mb-0 lead fw-normal">Both in our source code and in our user documentation we strive for consistency, simplicity, clarity, and readability. Delivered with the software from day one, even for the simplest update or release.</p>
+                        <p class="mb-0 lead fw-normal">Both in our source code and in our user documentation we strive for consistency, simplicity, clarity, and readability. Delivered with the software from day one, we strive to document even the simplest update or release.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
