--- a/project-microcode.html
+++ b/project-microcode.html
@@ -513,7 +513,7 @@
                         <div class="col-lg-2"></div>
                         <div class="col-lg me-xl-n30 show-on-scroll" data-show-duration="900" data-show-delay="150">
                             <hr class="mt-0 border-white">
-                            <p class="lead fw-normal">Founded in June 1987 we have 35 years of experience designing, developing, deploying, and supporting maufacturing applications.</p>
+                            <p class="lead fw-normal">Founded in June 1987 we have 35 years of experience designing, developing, deploying, and supporting manufacturing applications.</p>
                             <a href="contact-business.html" class="btn btn-white btn-with-ball">let’s work</a>
                         </div>
                         <div class="d-none d-xl-block col-1"></div>
@@ -548,7 +548,7 @@
                                 </a>
                                 <div class="card-body">
                                     <a href="project-gm-xep.html" class="card-title h2">Controls Engineering</a>
-                                    <div class="card-text">We have over 30 years of PLC programming experience in all popular controlellers.</div>
+                                    <div class="card-text">We have over 30 years of PLC programming experience in all popular controllers.</div>
                                     <a href="project-gm-xep.html" class="btn btn-clean">view programs<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path d='M20 1L24 5L20 9' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                             <path d='M7 5L24 5' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
