Typos and MongoDB description

--- a/blog-2021-07-25.html
+++ b/blog-2021-07-25.html
@@ -522,7 +522,7 @@
                         <h3>Tough Competition, makes Better Racing.</h3>
                         <p>We raced the Shore Course this year because of Canadian COVID-19 restrictions, the same course we've raced many years in our Hughes 35. We were placed in Class D with a Melges 32, two C&C 115s, three J/109s, a J/130, and four 1D35s. </p>
                         <h4>Are we winning?</h4>
-                        <p>With Yellow Brick tracking everyone ashore and onbaord—most of the time—can follow the race and keep track of our competition. The J/109 CONSIG made it a nail-biter right to the last minute. When we finished we weren't sure for hours that she wouldn't take our time with their ORC rating handicap. It was an amazing moment I will never forget when we realized she was too far behind and the wind was dying, there was no way she could take our time, and we knew we had the time of all the boats ahead of us... we had won our first Mackinac! </p>
+                        <p>With Yellow Brick tracking everyone ashore and onboard—most of the time—can follow the race and keep track of our competition. The J/109 CONSIG made it a nail-biter right to the last minute. When we finished we weren't sure for hours that she wouldn't take our time with their ORC handicap. It was an amazing moment I will never forget when we realized she was too far behind and the wind was dying, there was no way she could take our time, and we knew we had the time of all the boats ahead of us... we had won our first Mackinac! </p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
