--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                         </svg></a></div>
                                 <div class="feature-body">
                                     <h4 class="feature-title">MongoDB</h4>
-                                    <p class="feature-text">Cloud database services, with unmatched data distribution and mobility across AWS, Azure, and Google Cloud, built-in automation for resource and workload optimization, and more.</p>
+                                    <p class="feature-text">MongoDB stores data in flexible, JSON-like documents, meaning fields can vary from document to document and data structures can be changed over time. This is refered to as No-SQL data storage.</p>
                                 </div>
                             </div>
                         </div>
