Updated Page Names for Browser

--- a/my-blog.html
+++ b/my-blog.html
@@ -66,7 +66,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>tjmcode | My Blog</title>
+        <title>tjmcode | blog</title>
         <meta name="My Portfolio" content="Timothy McGuire">
         <meta name="Timothy McGuire" content="Portfolio">
         <!-- Browser Tab Icon -->
