--- a/my-cycling.html
+++ b/my-cycling.html
@@ -66,7 +66,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>tjmcode | Cycling</title>
+        <title>tjmcode | cycling</title>
         <meta name="My Portfolio" content="Timothy McGuire">
         <meta name="Timothy McGuire" content="Portfolio">
         <!-- Browser Tab Icon -->
