CAESAR not CESR - readability!

--- a/about-me.html
+++ b/about-me.html
@@ -561,7 +561,7 @@
                                 </button>
                                 <div id="collapseCoding" class="collapse" data-parent="#accordionAbout">
                                     <div class="collapse-content">
-                                        <p class="mb-0 font-size-16">"<b>Code like a Machine</b>: Consistently, Explicitly, Simply, and for Readability (CESR)."<span>&#8480;</span></p>
+                                        <p class="mb-0 font-size-16">"<b>Code like a Machine</b>: Consistently, Explicitly, Simply, and for Readability (CAESAR)."<span>&#8480;</span></p>
                                         <br>
                                         <p class="mb-0 font-size-16">"Define the Style Guides, Code Templates, and the Release and Support Process first... <i>the rest is easy</i>."</p>
                                     </div>
@@ -589,7 +589,7 @@
                                 </button>
                                 <div id="collapseBooks" class="collapse" data-parent="#accordionAbout">
                                     <div class="collapse-content">
-                                        <p class="mb-0 font-size-16">You can learn anything from a good book. They give you access to the experts in any field, time with the people who spent their lives learning something, and then they passed it on... if you read.</p>
+                                        <p class="mb-0 font-size-16">You can learn anything from a good book. They give you access to the experts in any field, time with the people who spent their whole lives learning something, and then they passed it on... if you read.</p>
                                     </div>
                                 </div>
                             </div>
