--- a/contact-business.html
+++ b/contact-business.html
@@ -720,7 +720,7 @@
                         <a href="index.html" class="d-block mb-30">
                             <img width="176" src="assets/images/me/timothy-mcguire-white-TJM.png" alt="">
                         </a>
-                        <p class="mb-0">"<b>Code like a Machine</b>: Consistently, Explicitly, Simply, and for Readability (CESR)." <span>&#8480;</span>
+                        <p class="mb-0">"<b>Code like a Machine</b>: Consistently, Explicitly, Simply, and for Readability (CAESAR)." <span>&#8480;</span>
                         </p>
                     </div>
                     <div class="d-none d-lg-block col-2"></div>
