blog: 2022-11-03 Ben is Born!

--- a/blog-2021-11-03.html
+++ b/blog-2021-11-03.html
@@ -497,48 +497,120 @@
                         <h1 class="h2 mb-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">Benjamin Carter Medlyn is born!</h1>
                     </div>
                 </div>
-                <img class="w-100 mb-100 show-on-scroll" src="assets/images/blog/2021-11-03-adam-nikki-chad-ben.jpg" alt="" data-show-duration="800">
+                <img class="w-100 mb-100 show-on-scroll" src="assets/images/blog/2021-11-03-ben-is-born-doing-great.jpg" alt="" data-show-duration="800">
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
                         <p class="lead fw-medium">A miracle baby.</p>
-                        <p>Ben wasn't supposed to arrive until the end of December but Nikki's water broke the first night she arrived in Dallas for her brother Adam's wedding! </p>
-                        <p>...</p>
+                        <p>Ben wasn't supposed to arrive until the end of December but Nikki's water broke the first night she arrived in Dallas for her brother Adam's wedding! Nikki attended the wedding from a hospital bed guarding Ben, she even wore her dress for the occasion!</p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
-                    <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="50">
-                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
+                    <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="150">
+                        <a href="assets/images/blog/2021-11-03-statler-grandma-calvin-chad.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-statler-grandma-calvin-chad.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="150">
-                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
+                    <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="50">
+                        <a href="assets/images/blog/2021-11-03-nikki-wedding-from-hospital.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-nikki-wedding-from-hospital.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row justify-content-center gh-1 mb-100">
+                    <div class="col-lg-8 post-content">
+                        <h3>Quick... get the Family SUV!</h3>
+                        <p>After Chad and Nikki were told that Nikki could not leave the hospital until after Ben's normal due date (which has late December) everyone agreed they needed the family SUV (a Toyoda 4Runner) in Dallas for the long haul. </p>
+                        <h4>Planes, Trains, and Automobiles...</h4>
+                        <p>Chad and I flew back to Reno, Arizona with Calvin to get the 4Runner. Dropped Calvin off at Home with Grandpa and Grandma and drove non-stop (30 Hours) back to Dallas with the family SUV.
+                    </div>
+                </div>
+                <div class="row gh-1 gv-1 mb-100">
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="50">
+                        <a href="assets/images/blog/2021-11-03-return-to-reno-plane.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-return-to-reno-plane.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="150">
+                        <a href="assets/images/blog/2021-11-03-return-to-dallas-vegas-map.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-return-to-dallas-vegas-map.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="250">
+                        <a href="assets/images/blog/2021-11-03-return-to-dallas-vegas-strip.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-return-to-dallas-vegas-strip.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="50">
+                        <a href="assets/images/blog/2021-11-03-return-to-dallas-new-mexico.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-return-to-dallas-new-mexico.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="250">
+                        <a href="assets/images/blog/2021-11-03-return-to-dallas-dinner.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-return-to-dallas-dinner.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="150">
+                        <a href="assets/images/blog/2021-11-03-return-to-dallas-texas-steak.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-return-to-dallas-texas-steak.jpg" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
                         <h3>Benjamin Carter Medlyn</h3>
-                        <p>... </p>
-                        <h4>November 03, 2021 11:03 AM - 3 lb 11 oz (11/3/11/3/3/11)</h4>
-                        <p>...
+                        <p>Two days after making it back to Dallas, Ben was born! </p>
+                        <h4>November 03, 2021 12:03 PM - 3 lb 12 oz (11/3/21/12/3/3/12)</h4>
+                        <p>I was able to be in the delivery room for the birth, standing behind Nikki, talking pictures of my new grandson being born!
+                    </div>
+                </div>
+                <div class="row gh-1 gv-1 mb-100">
+                    <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="50">
+                        <a href="assets/images/blog/2021-11-03-ben-is-born-ready-to-go.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-is-born-ready-to-go.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="150">
+                        <a href="assets/images/blog/2021-11-03-ben-is-born-with-dad.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-is-born-with-dad.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row justify-content-center gh-1 mb-100">
+                    <div class="col-lg-8 post-content">
+                        <h3>Nikki and Ben go home for Thanksgiving!</h3>
+                        <p>Ben did so well that he was able to go home for Thanskgiving, almost a month earlier than expected! The staff at the Dallas Children's Hospital said they had never seen a 7-week premature baby so strong and ready to go! </p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="50">
-                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-ben-is-born-with-mom.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-is-born-with-mom.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="250">
-                        <a href="assets/images/blog/2021-11-03-wedding-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/2021-11-03-wedding-.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-ben-goes-home-mom.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-goes-home-mom.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="150">
-                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-ben-goes-home-plane.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-goes-home-plane.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="50">
+                        <a href="assets/images/blog/2021-11-03-ben-with-grandma-cathy.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-with-grandma-cathy.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="250">
+                        <a href="assets/images/blog/2021-11-03-ben-getting-big-at-home.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-getting-big-at-home.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="150">
+                        <a href="assets/images/blog/2021-11-03-ben-with-grandpa-tim.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-ben-with-grandpa-tim.jpg" alt="">
                         </a>
                     </div>
                 </div>
@@ -547,7 +619,7 @@
                         <svg class="mb-30" width="38" height="24" viewBox="0 0 38 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 24L10.1466 0H18.801L13.4293 24H0ZM19.199 24L29.3455 0H38L32.5288 24H19.199Z" fill="currentColor" />
                         </svg>
-                        <blockquote class="mt-6 mb-100">Congratulations to Nikki, Chad and Calvin!</blockquote>
+                        <blockquote class="mt-6 mb-100">Congratulations to Nikki, Chad and the new Big Brother Calvin!</blockquote>
                     </div>
                     <div class="col-12 col-lg-8">
                         <hr class="mt-n10 mb-30">
