--- a/my-blog.html
+++ b/my-blog.html
@@ -554,6 +554,26 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper-slide overflow-hidden">
+                                <div class="card card-overlay card-blog card-image-sm card-hover-zoom text-center text-white">
+                                    <div class="card-img" data-swiper-parallax-x="20%" class="swiper-image">
+                                        <img src="assets/images/blog/2021-11-03-ben-is-born.jpg" alt="">
+                                        <div class="background-color" style="background-color: rgba(14, 14, 14, .2);"></div>
+                                    </div>
+                                    <div class="card-img-overlay">
+                                        <div class="row justify-content-center align-items-center h-100">
+                                            <div class="col-12 col-lg-7">
+                                                <div class="subtitle mt-lg-3 mb-30">family - 03 nov 2021</div>
+                                                <h2 class="card-title h3-sm mb-0">Ben Medlyn is born in Dallas!</h2>
+                                                <a href="blog-2021-11-03.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                                        <path d='M20.5 1L25 5.5L20.5 10' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
+                                                        <path d='M7 5.5H25' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
+                                                    </svg></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-button-prev bg-white"><svg width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
@@ -641,6 +661,22 @@
                                     <div class="card-date">31 oct, 2021</div>
                                     <p class="card-text">A destination wedding for most of us, Dallas Texas here we come!.</p>
                                     <a href="blog-2021-10-31.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                            <path d='M20 1L24 5L20 9' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
+                                            <path d='M7 5L24 5' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
+                                        </svg></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filters="family">
+                            <div class="card card-blog card-vertical">
+                                <a href="blog-2021-11-03.html" class="card-img">
+                                    <img src="assets/images/blog/2021-11-03-ben-is-born.jpg" alt="">
+                                </a>
+                                <div class="card-body">
+                                    <a href="blog-2021-11-03.html" class="card-title h5">Benjamin Medlyn is born!</a>
+                                    <div class="card-date">03 nov, 2021</div>
+                                    <p class="card-text">A destination wedding delivers a Baby!</p>
+                                    <a href="blog-2021-11-03.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path d='M20 1L24 5L20 9' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                             <path d='M7 5L24 5' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                         </svg></a>
