Typos and Fact correction for 2022-11-03 Blog

--- a/blog-2021-11-03.html
+++ b/blog-2021-11-03.html
@@ -519,9 +519,9 @@
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
                         <h3>Quick... get the Family SUV!</h3>
-                        <p>After Chad and Nikki were told that Nikki could not leave the hospital until after Ben's normal due date (which has late December) everyone agreed they needed the family SUV (a Toyoda 4Runner) in Dallas for the long haul. </p>
+                        <p>After Chad and Nikki were told that Nikki could not leave the hospital until after Ben's normal due date (which has late December) everyone agreed they needed the family SUV (a Toyota 4Runner) in Dallas for the long haul. </p>
                         <h4>Planes, Trains, and Automobiles...</h4>
-                        <p>Chad and I flew back to Reno, Arizona with Calvin to get the 4Runner. Dropped Calvin off at Home with Grandpa and Grandma and drove non-stop (30 Hours) back to Dallas with the family SUV.
+                        <p>Chad and I flew back to Reno, Nevada with Calvin to get the 4Runner. Dropped Calvin off at Home with Grandpa and Grandma and drove non-stop (30 Hours) back to Dallas with the family SUV.
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
@@ -561,7 +561,7 @@
                         <h3>Benjamin Carter Medlyn</h3>
                         <p>Two days after making it back to Dallas, Ben was born! </p>
                         <h4>November 03, 2021 12:03 PM - 3 lb 12 oz (11/3/21/12/3/3/12)</h4>
-                        <p>I was able to be in the delivery room for the birth, standing behind Nikki, talking pictures of my new grandson being born!
+                        <p>I was able to be in the delivery room for the birth, standing behind Nikki, taking pictures of my new grandson being born!
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
@@ -579,7 +579,7 @@
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
                         <h3>Nikki and Ben go home for Thanksgiving!</h3>
-                        <p>Ben did so well that he was able to go home for Thanskgiving, almost a month earlier than expected! The staff at the Dallas Children's Hospital said they had never seen a 7-week premature baby so strong and ready to go! </p>
+                        <p>Ben did so well that he was able to go home for Thanskgiving, almost a month earlier than expected! The staff at the Medical City Dallas NICU said they had never seen a 8-week premature baby so strong and ready to go! </p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
