Add page view counter - main footer only

--- a/my-j112e.html
+++ b/my-j112e.html
@@ -590,8 +590,28 @@
                                 </a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="assets/images/sailing/j-composites.jpg" class="gallery-item gallery-item-md" data-fancybox="gallery-1" data-animation-effect="fade">
-                                    <img src="assets/images/sailing/j-composites.jpg" alt="">
+                                <a href="assets/images/sailing/elevation-headon.jpg" class="gallery-item gallery-item-md" data-fancybox="gallery-1" data-animation-effect="fade">
+                                    <img src="assets/images/sailing/elevation-headon.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="assets/images/sailing/elevation-stern.jpg" class="gallery-item gallery-item-md" data-fancybox="gallery-1" data-animation-effect="fade">
+                                    <img src="assets/images/sailing/elevation-stern.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="assets/images/sailing/j-composites-deck.jpg" class="gallery-item gallery-item-md" data-fancybox="gallery-1" data-animation-effect="fade">
+                                    <img src="assets/images/sailing/j-composites-deck.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="assets/images/sailing/j-composites-hull.jpg" class="gallery-item gallery-item-md" data-fancybox="gallery-1" data-animation-effect="fade">
+                                    <img src="assets/images/sailing/j-composites-hull.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="assets/images/sailing/tim-j-composites-yay.jpg" class="gallery-item gallery-item-md" data-fancybox="gallery-1" data-animation-effect="fade">
+                                    <img src="assets/images/sailing/tim-j-composites-yay.jpg" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide">
