--- a/project-app-support.html
+++ b/project-app-support.html
@@ -530,7 +530,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
                     <div class="col-12 col-lg-5 order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>Development Tools</h3>
-                        <p>During VAX/VMS and Alpha AXP years we used our own "MicroCODE Development System" (MDS) which was built as a shell on top of DEC Code Management (CMS) and Module Management System (MMS). With Windows development we use a internal version of our MDS along with Visual Studio. For Web development we use Git and GitHub and Visual Studio Code with our MDS process translated into 'Git Flow'-like workflow.</p>
+                        <p>During our VAX/VMS and Alpha AXP years we used our own "MicroCODE Development System" (MDS) which was built as a shell on top of DEC Code Management (CMS) and Module Management System (MMS). With Windows development we use a internal version of our MDS along with Visual Studio. For Web development we use Git and GitHub and Visual Studio Code with our MDS process translated into 'Git Flow'-like workflow.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
