--- a/project-gm-xep.html
+++ b/project-gm-xep.html
@@ -583,7 +583,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-1"></div>
                     <div class="col-12 col-lg-5 order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="250">
                         <h3>Result</h3>
-                        <p>Over Twenty-three (23) years of one continous error-proofing system in use 24-7-365 in General Motors Assembly Plants world-wide. No site was ever been left without a simple upgrade path to the current system. No Plant configuration database was ever corrupted, lost, or made obsolete. And every system—COSS, GEP, and SEP—was backward compatible with all the installed hardware and software configuration in the field.</p>
+                        <p>Over twenty-three (23) years of one continous error-proofing system in use 24-7-365 in General Motors Assembly Plants world-wide. No site was ever been left without a simple upgrade path to the current system. No Plant configuration database was ever corrupted, lost, or made obsolete. And every system—COSS, GEP, and SEP—was backward compatible with all the installed hardware and software configuration in the field.</p>
                         <a href="contact-business.html" class="btn btn-dark btn-with-ball">interested?</a>
                     </div>
                 </div>
