--- a/index.html
+++ b/index.html
@@ -1143,6 +1143,9 @@
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">Terms of Use</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <div class="view-counter"></div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
