--- a/project-microcode.html
+++ b/project-microcode.html
@@ -850,6 +850,9 @@
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">Terms of Use</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <div class="view-counter"></div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
