Swiper Animation, Copyright correction, Spacing

--- a/contact-business.html
+++ b/contact-business.html
@@ -1,5 +1,5 @@
 <!-- #region  H E A D E R -->
-<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
 <!-- #region  P R E A M B L E -->
 <!-- #region  D O C U M E N T A T I O N -->
 <!--
@@ -100,7 +100,7 @@
     <!-- #endregion -->
     <body>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -641,7 +641,7 @@
             <!-- #endregion -->
         </div>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="footer-business.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="footer-business.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
