--- a/project-microcode.html
+++ b/project-microcode.html
@@ -1,5 +1,5 @@
 <!-- #region  H E A D E R -->
-<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
 <!-- #region  P R E A M B L E -->
 <!-- #region  D O C U M E N T A T I O N -->
 <!--
@@ -100,7 +100,7 @@
     <!-- #endregion -->
     <body>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -707,7 +707,7 @@
             </div>
         </div>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="footer-personal.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="footer-personal.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -770,7 +770,7 @@
         <!-- #endregion -->
         <!-- #region  H T M L : page elements for the THEMEBAU Theme with my modifications -->
         <!-- THEMEBAU - Macro Settings -->
-        <!-- #region  FOOTER PERSONAL (DEFAULT) -->
+        <!-- #region  FOOTER (DEFAULT) -->
         <footer class="footer bg-dark text-white shape-parent overflow-hidden py-130"><a href="https://www.mcode.com/">
                 <div class="shape align-items-end justify-content-end">
                     <svg id="microcode-3" xmlns="http://www.w3.org/2000/svg" class="mb-n80" width="250" height="425" viewBox="0, 0, 768, 768">
