--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- #region  H E A D E R -->
-<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
 <!-- #region  P R E A M B L E -->
 <!-- #region  D O C U M E N T A T I O N -->
 <!--
@@ -100,7 +100,7 @@
     <!-- #endregion -->
     <body>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -959,7 +959,7 @@
                 <div class="container">
                     <h2 class="text-left text-black mt-n10 mb-100 show-on-scroll" data-show-duration="500" data-show-distance="5">what i do for fun.</h2>
                 </div>
-                <div class="swiper swiper-dark overflow-hidden mt-n10 show-on-scroll" data-swiper-slides="auto" data-swiper-gap="70" data-swiper-grabCursor="true" data-swiper-breakpoints="620:1" data-show-duration="800" data-show-delay="100">
+                <div class="swiper swiper-dark overflow-hidden mt-n10 show-on-scroll" data-swiper-loop="true" data-swiper-parallax=true" data-swiper-autoplay="1" data-swiper-speed="2000" data-swiper-slides="auto" data-swiper-gap="70" data-swiper-grabCursor="true" data-swiper-breakpoints="620:1" data-show-duration="800" data-show-delay="100">
                     <div class="container">
                         <div class="swiper-container overflow-initial">
                             <div class="swiper-wrapper align-items-center">
@@ -1000,7 +1000,7 @@
             </div>
         </div>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="footer-personal.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="footer-personal.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -1063,7 +1063,7 @@
         <!-- #endregion -->
         <!-- #region  H T M L : page elements for the THEMEBAU Theme with my modifications -->
         <!-- THEMEBAU - Macro Settings -->
-        <!-- #region  FOOTER PERSONAL (DEFAULT) -->
+        <!-- #region  FOOTER (DEFAULT) -->
         <footer class="footer bg-dark text-white shape-parent overflow-hidden py-130"><a href="https://www.mcode.com/">
                 <div class="shape align-items-end justify-content-end">
                     <svg id="microcode-3" xmlns="http://www.w3.org/2000/svg" class="mb-n80" width="250" height="425" viewBox="0, 0, 768, 768">
