--- a/my-family.html
+++ b/my-family.html
@@ -1,5 +1,5 @@
 <!-- #region  H E A D E R -->
-<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
 <!-- #region  P R E A M B L E -->
 <!-- #region  D O C U M E N T A T I O N -->
 <!--
@@ -100,7 +100,7 @@
     <!-- #endregion -->
     <body>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -498,7 +498,7 @@
                     <div class="background-color" style="background-color: rgb(14, 14, 14, .2);"></div>
                 </div>
                 <div class="container text-center">
-                    <h1 class="text-white mb-0 show-on-scroll" data-show-duration="700" data-show-distance="10">The McGuire Family</h1>
+                    <h1 class="text-white mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10">The McGuire Family</h1>
                 </div>
             </div>
             <div class="pt-160 shape-parent overflow-hidden">
@@ -564,7 +564,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper swiper-full-horizontal mt-130 mb-n6" data-swiper-slides="auto" data-swiper-gap="30" data-swiper-speed="600" data-swiper-loop="true" data-swiper-center="true" data-swiper-breakpoints="1200:1">
+                <div class="swiper swiper-full-horizontal mt-130 mb-n6" data-swiper-loop="true" data-swiper-parallax=true" data-swiper-autoplay="1" data-swiper-speed="2000" data-swiper-slides="auto" data-swiper-gap="30" data-swiper-center="true" data-swiper-grabCursor="true" data-swiper-breakpoints="1200:1" data-show-duration="800" data-show-delay="100">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
