--- a/my-homebuilding.html
+++ b/my-homebuilding.html
@@ -1,5 +1,5 @@
 <!-- #region  H E A D E R -->
-<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- copyright file="_head.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
 <!-- #region  P R E A M B L E -->
 <!-- #region  D O C U M E N T A T I O N -->
 <!--
@@ -100,7 +100,7 @@
     <!-- #endregion -->
     <body>
         <!-- #region  H E A D E R -->
-        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+        <!-- copyright file="navbar.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE, Inc. Troy, MI author="Timothy J. McGuire" -->
         <!-- #region  P R E A M B L E -->
         <!-- #region  D O C U M E N T A T I O N -->
         <!--
@@ -494,7 +494,7 @@
                 <div class="pt-60 pb-130 mt-10 mb-n10 text-center">
                     <h1 class="mb-n7 show-on-scroll" data-show-duration="700" data-show-distance="10">Home Design & Building</h1>
                 </div>
-                <div class="swiper mb-160 show-on-scroll" data-swiper-slides="1" data-swiper-speed="600" data-swiper-loop="true" data-swiper-parallax="true" data-show-duration="700" data-show-delay="200">
+                <div class="swiper mb-160 show-on-scroll" data-swiper-loop="true" data-swiper-parallax=true" data-swiper-autoplay="1" data-swiper-speed="2000" data-swiper-slides="auto" data-swiper-gap="30" data-swiper-center="true" data-swiper-grabCursor="true" data-swiper-breakpoints="1200:1" data-show-duration="800" data-show-delay="100">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
