--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                         <div class="grid-item">
                             <!-- portfolio description -->
                             <h1 class="display-4 mb-20 text-white show-on-scroll" data-show-duration="500" data-show-distance="10">portfolio.</h1>
-                            <p class="mb-4  text-white show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="200">This is a portfolio of my work over the years. The creation of this portfolio was a deliverable for the MIT xPRO: Professional Certificate in Coding: Full Stack Development with MERN. I used the technology from the course to built this modern website in order to showcase my course work and some of my major professionals projects as well.</p>
+                            <p class="mb-4  text-white show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="200">This is a portfolio of my work over the years. The creation of this portfolio was a deliverable for the MIT xPRO: Professional Certificate in Coding: Full Stack Development with MERN. I used the technology from the course to built this modern website in order to showcase my course work and some of my major professional projects as well.</p>
                             <p></p>
                         </div>
                         <!-- mug shot -->
@@ -1143,30 +1143,30 @@
                         </div>
                         <div class="d-none d-lg-block col-1"></div>
                     </div>
-                    <div class="row justify-content-between mt-100 mt-lg-0">
+                    <div class="row justify-content-between">
                         <div class="col-auto">
-                            <ul class="nav text-white align-items-center">
-                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="10" data-show-delay="500">
+                            <ul class="nav text-white nav-social align-items-center">
+                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="20" data-show-delay="500">
                                     <a href='https://github.com/tjmcode' class='nav-link'><svg width='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'>
                                             <path fill='rgb(149, 157, 165)' d='M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z' fill='currentColor' />
                                         </svg></a>
                                 </li>
-                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="10" data-show-delay="600">
+                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="20" data-show-delay="600">
                                     <a href='https://www.youtube.com/channel/UCRwSb-M7Duy1fGvCayvPXOQ' class='nav-link'><svg width='26' height='26' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 19.17 13.6'>
                                             <path fill='rgb(149, 157, 165)' d='M18.77 2.13A2.4 2.4 0 0 0 17.09.42C15.59 0 9.58 0 9.58 0a57.55 57.55 0 0 0-7.5.4A2.49 2.49 0 0 0 .39 2.13 26.27 26.27 0 0 0 0 6.8a26.15 26.15 0 0 0 .39 4.67 2.43 2.43 0 0 0 1.69 1.71c1.52.42 7.5.42 7.5.42a57.69 57.69 0 0 0 7.51-.4 2.4 2.4 0 0 0 1.68-1.71 25.63 25.63 0 0 0 .4-4.67 24 24 0 0 0-.4-4.69zM7.67 9.71V3.89l5 2.91z' fill='currentColor' />
                                         </svg></a>
                                 </li>
-                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="10" data-show-delay="700">
+                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="20" data-show-delay="700">
                                     <a href='https://facebook.com/TJM.CODE' class='nav-link'><svg width='24' height='24' viewBox='0 0 16.6 18' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path fill='rgb(149, 157, 165)' d='M14.5 0H.8a.88.88 0 0 0-.8.9v13.6a.88.88 0 0 0 .8.9h7.3v-6h-2V7.1h2V5.4a2.87 2.87 0 0 1 2.5-3.1h.5a10.87 10.87 0 0 1 1.8.1v2.1h-1.3c-1 0-1.1.5-1.1 1.1v1.5h2.3l-.3 2.3h-2v5.9h3.9a.88.88 0 0 0 .9-.8V.8a.86.86 0 0 0-.8-.8z' fill='currentColor' />
                                         </svg></a>
                                 </li>
-                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="10" data-show-delay="800">
+                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="20" data-show-delay="800">
                                     <a href='https://twitter.com/TimothyMcGuire' class='nav-link'><svg width='22' height='22' viewBox='0 0 25 21' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path fill='rgb(149, 157, 165)' d='M22.0706 5.51356C22.086 5.73504 22.086 5.95656 22.086 6.17804C22.086 12.9334 17.0783 20.7172 7.92575 20.7172C5.10601 20.7172 2.48661 19.8787 0.283203 18.4232C0.683835 18.4707 1.069 18.4865 1.48505 18.4865C3.81167 18.4865 5.95347 17.6797 7.6638 16.3033C5.47581 16.2558 3.64221 14.7845 3.01046 12.7594C3.31865 12.8069 3.6268 12.8385 3.9504 12.8385C4.39723 12.8385 4.84411 12.7752 5.2601 12.6645C2.97968 12.1898 1.2693 10.1332 1.2693 7.64935V7.58609C1.93183 7.96579 2.70231 8.20309 3.5189 8.2347C2.17837 7.31709 1.30013 5.75086 1.30013 3.97894C1.30013 3.02972 1.54661 2.15959 1.97807 1.40019C4.42801 4.50103 8.11063 6.52604 12.24 6.74756C12.163 6.36787 12.1168 5.97239 12.1168 5.57687C12.1168 2.76076 14.3356 0.466797 17.0937 0.466797C18.5266 0.466797 19.8209 1.0838 20.73 2.0805C21.8548 1.85902 22.9334 1.43184 23.8887 0.846495C23.5189 2.03307 22.7331 3.02977 21.7008 3.66255C22.7023 3.55186 23.673 3.26702 24.5667 2.87155C23.8888 3.88403 23.0413 4.78577 22.0706 5.51356Z' fill='currentColor' />
                                         </svg></a>
                                 </li>
-                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="10" data-show-delay="900">
+                                <li class="nav-item show-on-scroll" data-show-duration="700" data-show-distance="20" data-show-delay="900">
                                     <a href='https://linkedin.com/in/timmcguiremicrocode' class='nav-link'><svg width='26' height='26' viewBox='0 0 25 21' fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 19 18'>
                                             <path fill='rgb(149, 157, 165)' d='M3.94 2A2 2 0 1 1 2 0a2 2 0 0 1 1.94 2zM4 5.48H0V18h4zm6.32 0H6.34V18h3.94v-6.57c0-3.66 4.77-4 4.77 0V18H19v-7.93c0-6.17-7.06-5.94-8.72-2.91z' fill='currentColor' />
                                         </svg></a>
