--- a/project-mit-xpro.html
+++ b/project-mit-xpro.html
@@ -561,7 +561,7 @@
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
                     <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="50">
                         <h3>Eye Exercise</h3>
-                        <p class="mb-0 lead fw-normal">An exercise involving the extension of starter code. Continued use of GitHub with an eye toward building this Portfolio, this was an excellent way to build Git/itHub skills. </p>
+                        <p class="mb-0 lead fw-normal">An exercise involving the extension of starter code. Continued use of GitHub with an eye toward building this Portfolio, this was an excellent way to build GitHub skills. </p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
