--- a/contact-support.html
+++ b/contact-support.html
@@ -130,7 +130,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>MicroCODE | business</title>
+        <title>MicroCODE | support</title>
         <meta name="Business" content="MicroCODE, Inc.">
         <meta name="Designer" content="Timothy McGuire">
         <!-- Browser Tab Icon -->
@@ -388,12 +388,12 @@
                         </a>
                         <div class="dropdown-menu">
                             <ul class="nav navbar-nav">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a href="contact-business.html" class="nav-link">
                                         <span class="nav-link-name">business</span>
                                     </a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item active">
                                     <a href="contact-support.html" class="nav-link">
                                         <span class="nav-link-name">suppport</span>
                                     </a>
@@ -619,12 +619,12 @@
                                     </a>
                                     <div class="navbar-collapse-menu collapse" id="navbarCollapseContact">
                                         <ul class="nav navbar-nav">
-                                            <li class="nav-item active">
+                                            <li class="nav-item">
                                                 <a href="contact-business.html" class="nav-link">
                                                     <span class="nav-link-name">business</span>
                                                 </a>
                                             </li>
-                                            <li class="nav-item">
+                                            <li class="nav-item active">
                                                 <a href="contact-support.html" class="nav-link">
                                                     <span class="nav-link-name">suppport</span>
                                                 </a>
@@ -727,17 +727,17 @@
                     <!-- INQUIRY INPUT -->
                     <div class="row justify-content-center text-white">
                         <div class="col-lg-10">
-                            <h1 class="display-2 text-white mt-5 mb-80 show-on-scroll" data-show-duration="500" data-show-distance="200">Project inquiry...</h1>
+                            <h1 class="display-2 text-white mt-5 mb-80 show-on-scroll" data-show-duration="500" data-show-distance="200">Support request...</h1>
                             <form action="#">
                                 <p class="lead fw-medium mb-30">Choose the types of project:</p>
                                 <div class="row gh-xs gv-xs mb-n7">
                                     <div class="col-auto show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="100">
-                                        <input class="checkbox-btn" type="checkbox" id="checkboxWebDesign">
-                                        <label for="checkboxWebDesign"><span>Web Design</span></label>
+                                        <input class="checkbox-btn" type="checkbox" id="checkboxAppDefect">
+                                        <label for="checkboxAppDefect"><span>App Defect</span></label>
                                     </div>
                                     <div class="col-auto show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">
-                                        <input class="checkbox-btn" type="checkbox" id="checkboxAppDesign" checked>
-                                        <label for="checkboxAppDesign"><span>App Design</span></label>
+                                        <input class="checkbox-btn" type="checkbox" id="checkboxAppFeature" checked>
+                                        <label for="checkboxAppFeature"><span>App Feature</span></label>
                                     </div>
                                     <div class="col-auto show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="200">
                                         <input class="checkbox-btn" type="checkbox" id="checkboxUserTraining" checked>
@@ -748,12 +748,12 @@
                                         <label for="checkboxDocumentation"><span>Documentation</span></label>
                                     </div>
                                     <div class="col-auto show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="350">
-                                        <input class="checkbox-btn" type="checkbox" id="checkboxWebDevelopment">
-                                        <label for="checkboxWebDevelopment"><span>Web Development</span></label>
+                                        <input class="checkbox-btn" type="checkbox" id="checkboxWebSite">
+                                        <label for="checkboxWebSite"><span>Web Site</span></label>
                                     </div>
                                     <div class="col-auto show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="400">
-                                        <input class="checkbox-btn" type="checkbox" id="checkboxAppDevelopment">
-                                        <label for="checkboxAppDevelopment"><span>App Development</span></label>
+                                        <input class="checkbox-btn" type="checkbox" id="checkboxAppRequest">
+                                        <label for="checkboxAppRequest"><span>App Request</span></label>
                                     </div>
                                     <div class="col-auto show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="450">
                                         <input class="checkbox-btn" type="checkbox" id="checkboxControlsEngineering" checked>
@@ -778,27 +778,6 @@
                                     </div>
                                     <div class="col-12 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="350">
                                         <textarea class="form-control form-control-lg form-control-white" rows="1" placeholder="Message *"></textarea>
-                                    </div>
-                                </div>
-                                <p class="lead fw-medium mb-30 mt-60 pt-9">Choose the budget:</p>
-                                <div class="row gh-xs gv-xs">
-                                    <div class="col-auto show-on-scroll" data-show-distance="10" data-show-duration="500" data-show-delay="100">
-                                        <input class="checkbox-btn" type="checkbox" id="checkbox&lt;10
-000">
-                                        <label for="checkbox&lt;10
-000"><span>&lt; 10 000</span></label>
-                                    </div>
-                                    <div class="col-auto show-on-scroll" data-show-distance="10" data-show-duration="500" data-show-delay="150">
-                                        <input class="checkbox-btn" type="checkbox" id="checkbox10-20k">
-                                        <label for="checkbox10-20k"><span>10 - 20k</span></label>
-                                    </div>
-                                    <div class="col-auto show-on-scroll" data-show-distance="10" data-show-duration="500" data-show-delay="200">
-                                        <input class="checkbox-btn" type="checkbox" id="checkbox20-30k" checked>
-                                        <label for="checkbox20-30k"><span>20 - 30k</span></label>
-                                    </div>
-                                    <div class="col-auto show-on-scroll" data-show-distance="10" data-show-duration="500" data-show-delay="250">
-                                        <input class="checkbox-btn" type="checkbox" id="checkbox&gt;30000">
-                                        <label for="checkbox&gt;30000"><span>&gt; 30 000</span></label>
                                     </div>
                                 </div>
                                 <button class="btn btn-white btn-with-ball mt-90 show-on-scroll" type="button" name="button" data-show-distance="10" data-show-duration="500" data-show-delay="300">submit</button>
